--- a/pages/project/project.css
+++ b/pages/project/project.css
@@ -65,10 +65,15 @@
   align-items: center;
   padding: $aside-padding;
   box-sizing: border-box;
+  @media(min-width: $screen-md) and (max-width: 1450px){
+    max-width: 33.333vw;
+  }
+  @media(min-width: $screen-md) and (max-width: $screen-lg) {
+    max-width: 33.333vw
+  }
   @media(min-width: $screen-md) {
     position: relative;
     max-height: $window-height__sans-header;
-    max-width: 25vw;
     position: fixed;
     top: 0;
     left: 0;
@@ -77,23 +82,17 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    z-index: 50;
     & > div {
       overflow-y: auto;
-      /*&:after{
-        content: "";
-        position: absolute;
-        height: $aside-padding;
-        bottom: $aside-padding;
-        left: 0; right: 0;
-        margin: 0 $aside-padding;
-        background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,1));
-      }*/
     }
   }
-  @media(min-width: $screen-md) and (max-width: 1450px){
-    max-width: 33.333vw;
-  }
+
   @media(max-width: $screen-md) {
+    flex: 1 0 auto;
+    margin: auto;
+  }
+  @media(max-width: $screen-sm) {
     flex: 1 0 auto;
     max-width: $screen-sm;
     margin: auto;
@@ -101,7 +100,6 @@
 }
 
 .aside > div {
-  /*background-color: rgba(255, 255, 255, .75);*/
   background: $gradient-white;
   border-radius: $border-radius;
   padding: 2rem;
@@ -147,6 +145,7 @@
   }
   @media(min-width: $screen-md) and (max-width: 1450px){
     max-width: 66.666vw;
+    margin: auto 0 auto auto;
   }
 }
 
@@ -154,7 +153,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  height: $window-height__sans-header;
+  min-height: calc($window-height__sans-header - 2rem);
   display: flex;
   flex-direction: column;
   background: $gradient-white;
@@ -164,7 +163,7 @@
   }
   @media(max-width: $screen-md) {
     height: auto;
-    min-height: 95vmin;
+    min-height: calc(100vh - 6.875rem);
   }
 }
 
